WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120123
[BlackBerry] Incorrect origin of indexOfTile in LayerTiler can cause unnecessary texture jobs and waste memory
https://bugs.webkit.org/show_bug.cgi?id=120123
Summary
[BlackBerry] Incorrect origin of indexOfTile in LayerTiler can cause unnecess...
Jacky Jiang
Reported
2013-08-21 10:58:21 PDT
Jira: 481356.
Attachments
Patch
(2.83 KB, patch)
2013-08-21 11:09 PDT
,
Jacky Jiang
yong.li.webkit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-08-21 11:09:56 PDT
Created
attachment 209287
[details]
Patch
Yong Li
Comment 2
2013-08-21 11:58:24 PDT
Comment on
attachment 209287
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209287&action=review
r+ based on Arvid's review. but please update the comments before committing. BTW, "maxXMaxYCorner" is a little bit confusing, as it gives me a feeling that the returned value is included in the rect.
> Source/WebCore/platform/graphics/blackberry/LayerTiler.cpp:257 > + last = indexOfTile(ceiledIntPoint(visibleRect.maxXMaxYCorner()) + IntPoint(-1, -1)); // The origin should be the top left of the bottom right pixel.
shouldn't "top left" be "upper left"?
> Source/WebCore/platform/graphics/blackberry/LayerTiler.cpp:415 > + TileIndex last = indexOfTile(job.m_dirtyRect.maxXMaxYCorner() + IntPoint(-1, -1)); // The origin should be the top left of the bottom right pixel.
shouldn't "top left" be "upper left"?
Jacky Jiang
Comment 3
2013-08-21 12:17:17 PDT
Comment on
attachment 209287
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209287&action=review
>> Source/WebCore/platform/graphics/blackberry/LayerTiler.cpp:257 >> + last = indexOfTile(ceiledIntPoint(visibleRect.maxXMaxYCorner()) + IntPoint(-1, -1)); // The origin should be the top left of the bottom right pixel. > > shouldn't "top left" be "upper left"?
As I know, we usually use "top left" instead of "upper left" both in graphics and css, right? But I can use "upper left" if you prefer this.
>> Source/WebCore/platform/graphics/blackberry/LayerTiler.cpp:415 >> + TileIndex last = indexOfTile(job.m_dirtyRect.maxXMaxYCorner() + IntPoint(-1, -1)); // The origin should be the top left of the bottom right pixel. > > shouldn't "top left" be "upper left"?
ditto.
Yong Li
Comment 4
2013-08-21 13:44:48 PDT
Comment on
attachment 209287
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209287&action=review
Overall comments
>>> Source/WebCore/platform/graphics/blackberry/LayerTiler.cpp:415 >>> + TileIndex last = indexOfTile(job.m_dirtyRect.maxXMaxYCorner() + IntPoint(-1, -1)); // The origin should be the top left of the bottom right pixel. >> >> shouldn't "top left" be "upper left"? > > ditto.
OK
Jacky Jiang
Comment 5
2013-08-21 14:39:32 PDT
Committed
r154418
: <
http://trac.webkit.org/changeset/154418
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug